--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 
 @import "tailwindcss";
 @plugin "daisyui";
+
+a.active{
+    font-weight: 900;
+    font-size: 22px;
+    color: rgb(72, 139, 26);
+}
